postgresql-common (165+deb8u2) jessie; urgency=medium

  * pg_upgradecluster: Properly upgrade databases with non-login role owners.
    (Closes: #614374, #838812)

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 13 Oct 2016 15:32:49 +0200

postgresql-common (165+deb8u1) jessie; urgency=medium

  * pg_upgradecluster: Set default dynamic_shared_memory_type = mmap.
    (Closes: #784005, #812206)

    This primarily avoids problems with upgrading existing clusters in a LXC
    container. As earlier PG versions did not have d_s_m_t, the upgraded
    postgresql.conf won't have this setting either, yielding the compiled-in
    default of 'posix' which doesn't work in LXC. Pick something else here to
    avoid that problem. Notably, it's important that this problem is fixed in
    pg_upgradecluster itself because working around the problem is hard as the
    upgrade will fail early without the possibility of manually fixing the
    config. (Newly created clusters do not have that problem because initdb
    probes for a method working in the given system.)

  * t/040_upgrade.t: Skip testing pg_upgrade with datallowconn = f, it does
    not support that anymore as of May 2015.
    (Cherry-pick from master to allow testing the pg_upgradecluster fix)

 -- Christoph Berg <myon@debian.org>  Sat, 26 Mar 2016 16:52:30 +0100

postgresql-common (165) unstable; urgency=medium

  * Debconf translation updates, thanks!
    + es by Manuel Venturi Porras Peralta. (Closes: #773598)

 -- Christoph Berg <myon@debian.org>  Sun, 04 Jan 2015 18:51:31 +0100

postgresql-common (164) unstable; urgency=medium

  * Init script: Always create /var/run/postgresql on start.
    (Closes: #772824)
  * Debconf translation updates, thanks!
    + pt by Ricardo Silva. (Closes: #767399)
  * t/100_upgrade_scripts.t: Incompatible with eatmydata, remove from
    LD_PRELOAD when detected.
  * t/170_extensions.t: Catch warning with chkpass on 9.5.